tests/dfrouter/errors/detector_files/broken_detectors_file1i/errors.dfrouter
Error: Attribute 'lane' in definition of detectorDefinition 'MQ11Fs1' is empty.
Error: Process Error
Quitting (on error).
